force-app/main/default/objects/Lead/fields/May_have_another_baby__c.field-meta.xml
<CustomField>
    <fullName>May_have_another_baby__c</fullName>
    <label>May have another baby</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>