force-app/main/default/objects/Lead/fields/mkto71_Inferred_Company__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Company__c</fullName>
    <description>Used by Marketo</description>
    <label>Inferred Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>