force-app/main/default/objects/Lead/fields/mkto71_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Lead_Score__c</fullName>
    <description>Used with Marketo</description>
    <label>Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>