force-app/main/default/objects/Lead/fields/MNX_Invoice_Cost__c.field-meta.xml
<CustomField>
    <fullName>MNX_Invoice_Cost__c</fullName>
    <label>MNX Invoice Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>