force-app/main/default/objects/Lead/fields/Mobile_test__c.field-meta.xml
<CustomField>
    <fullName>Mobile_test__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>