force-app/main/default/objects/Lead/fields/Mother_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Date_of_Birth__c</fullName>
    <label>Mother&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>