force-app/main/default/objects/Lead/fields/Mother_s_Day_Survey__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Day_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mother&apos;s Day Survey</label>
    <type>Checkbox</type>
</CustomField>