force-app/main/default/objects/Lead/fields/Mother_s_Education__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Education__c</fullName>
    <label>Mother&apos;s Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>