force-app/main/default/objects/Lead/fields/Mother_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Email__c</fullName>
    <label>Mother&apos;s Email</label>
    <type>Email</type>
</CustomField>