force-app/main/default/objects/Lead/fields/Mother_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_First_Name__c</fullName>
    <label>Mother&apos;s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>