force-app/main/default/objects/Lead/fields/Mother_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Phone__c</fullName>
    <label>Mother&apos;s Phone</label>
    <type>Phone</type>
</CustomField>