force-app/main/default/objects/Lead/fields/Mother_s_Profession__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Profession__c</fullName>
    <label>Mother&apos;s Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>