force-app/main/default/objects/Lead/fields/Multiple_Births__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Births__c</fullName>
    <label>How many children are you having?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Twins</fullName>
            </value>
            <value>
                <fullName>Triplets</fullName>
            </value>
            <value>
                <fullName>3+</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>