force-app/main/default/objects/Lead/fields/n2de__Action__c.field-meta.xml
<CustomField>
    <fullName>n2de__Action__c</fullName>
    <label>Distribution action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>