force-app/main/default/objects/Lead/fields/n2de__Last_distributed__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_distributed__c</fullName>
    <label>Last distributed</label>
    <type>DateTime</type>
</CustomField>