force-app/main/default/objects/Lead/fields/Name_of_Child__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Child__c</fullName>
    <label>Name of Child</label>
    <length>100</length>
    <type>Text</type>
</CustomField>