force-app/main/default/objects/Lead/fields/NEED_NEW_CC__c.field-meta.xml
<CustomField>
    <fullName>NEED_NEW_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, we must obtain new credit card info from the client. This can only be unchecked once the card has successfully been billed.</description>
    <label>NEED NEW CC</label>
    <type>Checkbox</type>
</CustomField>