force-app/main/default/objects/Lead/fields/Not_Available_Notes__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_Notes__c</fullName>
    <description>Not Available Notes</description>
    <label>Not Available Notes</label>
    <type>TextArea</type>
</CustomField>