force-app/main/default/objects/Lead/fields/Not_Available_weekdays__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_weekdays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not Available Weekdays</description>
    <label>Not Available Weekdays</label>
    <type>Checkbox</type>
</CustomField>