force-app/main/default/objects/Lead/fields/Not_Available_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not Available Weekends</description>
    <label>Not Available Weekends</label>
    <type>Checkbox</type>
</CustomField>