force-app/main/default/objects/Lead/fields/Not_Available_Weeknights__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_Weeknights__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not Available Weeknights</description>
    <label>Not Available Weeknights</label>
    <type>Checkbox</type>
</CustomField>