force-app/main/default/objects/Lead/fields/Number_of_Babies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Babies__c</fullName>
    <label>Number of Babies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Twins</fullName>
            </value>
            <value>
                <fullName>Triplets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>