force-app/main/default/objects/Lead/fields/Number_of_Births__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Births__c</fullName>
    <formula>if (contains(text(Product1__c), &apos;single&apos;), &quot;Single&quot;,
if (contains(text(Product1__c), &apos;twins&apos;), &quot;Twins&quot;, 
if (contains(text(Product1__c), &apos;triplets&apos;), &quot;Triplets&quot;,
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Births</label>
    <type>Text</type>
</CustomField>