force-app/main/default/objects/Lead/fields/OBGYN__c.field-meta.xml
<CustomField>
    <fullName>OBGYN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creates a relationship between new Lead and OBGYN, maps to Opportunity.</description>
    <label>OBGYN</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only add an OBGYN record. Please select another record or request Tech Support.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medical Professional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (OBGYN)</relationshipLabel>
    <relationshipName>Client_Lead_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>