force-app/main/default/objects/Lead/fields/OBGYN_Address__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Address__c</fullName>
    <label>OBGYN Address</label>
    <length>75</length>
    <type>Text</type>
</CustomField>