force-app/main/default/objects/Lead/fields/OBGYN_City__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_City__c</fullName>
    <label>OBGYN City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>