force-app/main/default/objects/Lead/fields/OBGYN_Fax__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Fax__c</fullName>
    <label>OBGYN Fax</label>
    <type>Phone</type>
</CustomField>