force-app/main/default/objects/Lead/fields/OBGYN_Name__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Name__c</fullName>
    <label>OBGYN Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>