force-app/main/default/objects/Lead/fields/OBGYN_Phone__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Phone__c</fullName>
    <label>OBGYN Phone</label>
    <type>Phone</type>
</CustomField>