force-app/main/default/objects/Lead/fields/OBGYN_Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Practice_Name__c</fullName>
    <label>OBGYN Practice Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>