force-app/main/default/objects/Lead/fields/OBGYN_State__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_State__c</fullName>
    <label>OBGYN State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>