force-app/main/default/objects/Lead/fields/OBGYN_Zip__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Zip__c</fullName>
    <label>OBGYN Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>