force-app/main/default/objects/Lead/fields/Obstrician_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Obstrician_s_Name__c</fullName>
    <description>Obstrician&apos;s Name</description>
    <inlineHelpText>Obstrician&apos;s Name</inlineHelpText>
    <label>Obstrician&apos;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>