force-app/main/default/objects/Lead/fields/Order_Price_For_Migration__c.field-meta.xml
<CustomField>
    <fullName>Order_Price_For_Migration__c</fullName>
    <label>Order Price For Migration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>