force-app/main/default/objects/Lead/fields/Order_Temp__c.field-meta.xml
<CustomField>
    <fullName>Order_Temp__c</fullName>
    <description>Import of Order ID into text field for temporary use.  Using it to find enrolled leads without order id.</description>
    <label>Order Temp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>