force-app/main/default/objects/Lead/fields/Original_Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Kit_ID__c</fullName>
    <inlineHelpText>Fill this field out if the order has been cancelled. Add the Kit ID here so that we can track the return.</inlineHelpText>
    <label>Original Kit ID</label>
    <type>TextArea</type>
</CustomField>