force-app/main/default/objects/Lead/fields/Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Division__c</fullName>
    <description>Used for AutoConvert filter for lead conversion</description>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Division</label>
    <type>Text</type>
</CustomField>