force-app/main/default/objects/Lead/fields/Parent_2_Relation_to_Baby__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Relation_to_Baby__c</fullName>
    <label>Parent 2 Relation to Baby</label>
    <length>15</length>
    <type>Text</type>
</CustomField>