force-app/main/default/objects/Lead/fields/paymentplanawareness__c.field-meta.xml
<CustomField>
    <fullName>paymentplanawareness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE Survey. Data comes from Marketo and is mapped to Account and Opportunity.</description>
    <label>Payment plan awareness</label>
    <type>Checkbox</type>
</CustomField>