force-app/main/default/objects/Lead/fields/Placenta_2_0__c.field-meta.xml
<CustomField>
    <fullName>Placenta_2_0__c</fullName>
    <label>Placenta 2.0 (Amnion)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>