force-app/main/default/objects/Lead/fields/Placenta_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Tissue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Placenta Tissue</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>