force-app/main/default/objects/Lead/fields/Placenta_Tissue_Condition__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Tissue_Condition__c</fullName>
    <label>Placenta Tissue Condition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>