force-app/main/default/objects/Lead/fields/planningtobank__c.field-meta.xml
<CustomField>
    <fullName>planningtobank__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE Survey, data comes from Marketo and is mapped to Account and Opportunity.</description>
    <label>Planning to bank OLD</label>
    <type>Checkbox</type>
</CustomField>