force-app/main/default/objects/Lead/fields/Pre_Client_Enroll_Product__c.field-meta.xml
<CustomField>
    <fullName>Pre_Client_Enroll_Product__c</fullName>
    <label>Pre-Client Enroll Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>