force-app/main/default/objects/Lead/fields/Pre_Enrollment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pre_Enrollment_Comments__c</fullName>
    <label>Pre-Enrollment Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>