force-app/main/default/objects/Lead/fields/Pricing_Calculator_Choices__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Calculator_Choices__c</fullName>
    <inlineHelpText>Used to sync info from Pardot for Pricing Calculator. Used by Sales Reps to follow-up with clients.</inlineHelpText>
    <label>Pricing Calculator Choices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>