force-app/main/default/objects/Lead/fields/Pricing_Version__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Version__c</fullName>
    <description>Corresponds with the pricing API subversion.</description>
    <label>Pricing Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>