force-app/main/default/objects/Lead/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood 2.0 (one-time payment - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 (24 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (one-time payment - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (24 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (one-time payment - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (24 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (one-time payment - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (24 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 (one-time payment - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 (24 month - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (one-time payment - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (24 month - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (one-time payment - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (24 month - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (one-time payment - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (24 month - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 (one-time payment - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 (24 month - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (one-time payment - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (24 month - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (one-time payment - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (24 month - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (one-time payment - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (24 month - triplets)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 (12 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue (12 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Placenta Tissue (12 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue &amp; Placenta Tissue (12 month - single child)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue plus Placenta Tissue for one (one-time payment - twins)</fullName>
            </value>
            <value>
                <fullName>Cord Blood 2.0 with Cord Tissue plus Placenta Tissue for one (24 month - twins)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>