force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product (OBSOLETE)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>