force-app/main/default/objects/Lead/fields/Product_Discount_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Amount1__c</fullName>
    <label>Product Discount Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>