force-app/main/default/objects/Lead/fields/Product_List_Price1__c.field-meta.xml
<CustomField>
    <fullName>Product_List_Price1__c</fullName>
    <label>Product List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>