force-app/main/default/objects/Lead/fields/Product_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Product_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Lookup</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>