force-app/main/default/objects/Lead/fields/Products_validated_by_Lab__c.field-meta.xml
<CustomField>
    <fullName>Products_validated_by_Lab__c</fullName>
    <inlineHelpText>Select all items validated by the lab and being stored for the client.  If Twins could not store cord blood for both, select &quot;Cord Blood&quot; not &quot;Cord Blood - Twins.&quot;  Do not include items that are being discarded.</inlineHelpText>
    <label>Products validated by Lab</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Twins - Cord Blood</fullName>
            </value>
            <value>
                <fullName>Twins - Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Twins - Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>Triplets - Cord Blood</fullName>
            </value>
            <value>
                <fullName>Triplets - Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Triplets - Placenta Tissue</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>