force-app/main/default/objects/Lead/fields/Proliferation_Assay_PT__c.field-meta.xml
<CustomField>
    <fullName>Proliferation_Assay_PT__c</fullName>
    <label>Proliferation Assay Test- PT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>