force-app/main/default/objects/Lead/fields/Proliferation_Assay_Test__c.field-meta.xml
<CustomField>
    <fullName>Proliferation_Assay_Test__c</fullName>
    <inlineHelpText>Test is required or requested = Required.  Test results are available and report is completed = Completed.</inlineHelpText>
    <label>Proliferation Assay Test- CT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>