force-app/main/default/objects/Lead/fields/Reason_for_Cancellaton__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellaton__c</fullName>
    <description>Complete this field if the client cancels the order after enrolling. Note why the client cancelled also.</description>
    <inlineHelpText>Complete this field if the client cancels the order after enrolling. Note why the client cancelled also.</inlineHelpText>
    <label>Cancellaton Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americord Fault</fullName>
            </value>
            <value>
                <fullName>Banked with another company due to cost</fullName>
            </value>
            <value>
                <fullName>Banked with another company-other</fullName>
            </value>
            <value>
                <fullName>Client has not responded</fullName>
            </value>
            <value>
                <fullName>Collection below benchmark</fullName>
            </value>
            <value>
                <fullName>Decided not to bank due to cost</fullName>
            </value>
            <value>
                <fullName>Decided not to bank -explain</fullName>
            </value>
            <value>
                <fullName>Decided to donate publicly</fullName>
            </value>
            <value>
                <fullName>Did not bring kit with them at time of delivery-due to emergency</fullName>
            </value>
            <value>
                <fullName>Did not bring kit with them at time of delivery-forgot at home</fullName>
            </value>
            <value>
                <fullName>Did not receive kit- labor started after 72 hours of enrolling</fullName>
            </value>
            <value>
                <fullName>Did not receive kit- labor started within 72 hours of enrolling</fullName>
            </value>
            <value>
                <fullName>Doctor could not obtain collection-explain</fullName>
            </value>
            <value>
                <fullName>Medical Complication</fullName>
            </value>
            <value>
                <fullName>Other - please explain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>