force-app/main/default/objects/Lead/fields/Reasons_For_Not_Banking__c.field-meta.xml
<CustomField>
    <fullName>Reasons_For_Not_Banking__c</fullName>
    <label>Reasons For Not Banking</label>
    <type>TextArea</type>
</CustomField>