force-app/main/default/objects/Lead/fields/reconsider__c.field-meta.xml
<CustomField>
    <fullName>reconsider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used by WTE API survey, sync&apos;d from Marketo and mapped to Opportunity and Account</description>
    <label>reconsider</label>
    <type>Checkbox</type>
</CustomField>